View Issue Details

IDProjectCategoryView StatusLast Update
0029160Open CASCADEOCCT:Codingpublic2018-06-29 21:19
ReporterabvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.3.0Fixed in Version7.3.0 
Summary0029160: Coding - AppleCLang 9 compiler warning "binding dereferenced null pointer to reference has undefined behavior"
DescriptionWhen building OCCT on macOS Sierra, additional compiler warning is reported by AppleClang 9:

AppDef_MyLineTool.cxx:146: binding dereferenced null pointer to reference has undefined behavior
Steps To ReproduceBuild OCCT on macOS Sierra
TagsNo tags attached.
Test case numberNot required

Activities

git

2017-09-29 11:21

administrator   ~0070959

Branch CR29160 has been created by abv.

SHA-1: 1e24f65fed45b79c3cb55ae3ead00c5e88f967ec


Detailed log of new commits:

Author: abv
Date: Fri Sep 29 11:18:11 2017 +0300

    0029160: Coding - AppleCLang 9 compiler warning "binding dereferenced null pointer to reference has undefined behavior"
    
    Avoid returning reference to null in AppDef_MyLineTool

abv

2017-09-29 14:27

manager   ~0070984

Correction is pushed to CR29160 and tested, see Jenkins job CR29160-master-abv; please review

msv

2017-10-02 20:46

developer   ~0071127

Reviewed.

git

2017-10-03 10:04

administrator   ~0071141

Branch CR29160 has been updated forcibly by inv.

SHA-1: 778bd4d49163f011144cbab8f9f18fd67d72b69a

bugmaster

2017-10-03 13:24

administrator   ~0071150

Combination -
OCCT branch : CR29160 SHA-1: 778bd4d49163f011144cbab8f9f18fd67d72b69a
Products branch : master
was compiled on Linux, MacOS and Windows platforms and tested on optimize mode.

http://jenkins-test-10.nnov.opencascade.com/view/CR29160-master-abv/

Number of compiler warnings:
MacOS 0 (1 on master)

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
No differences that require special attention

Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2017-10-14 12:20

administrator   ~0071472

Branch CR29160 has been deleted by kgv.

SHA-1: 778bd4d49163f011144cbab8f9f18fd67d72b69a

Related Changesets

occt: master 8157aa28

2017-09-29 08:18:11

abv


Committer: bugmaster Details Diff
0029160: Coding - AppleCLang 9 compiler warning "binding dereferenced null pointer to reference has undefined behavior"

Avoid returning reference to null in AppDef_MyLineTool
Affected Issues
0029160
mod - src/AppDef/AppDef_MyLineTool.cxx Diff File
mod - src/AppDef/AppDef_MyLineTool.hxx Diff File

Issue History

Date Modified Username Field Change
2017-09-29 10:30 abv New Issue
2017-09-29 10:30 abv Assigned To => kgv
2017-09-29 11:21 git Note Added: 0070959
2017-09-29 14:27 abv Note Added: 0070984
2017-09-29 14:27 abv Assigned To kgv => msv
2017-09-29 14:27 abv Status new => resolved
2017-09-29 14:27 abv Steps to Reproduce Updated
2017-09-29 14:28 abv Target Version 7.4.0 => 7.3.0
2017-10-02 20:46 msv Note Added: 0071127
2017-10-02 20:46 msv Assigned To msv => bugmaster
2017-10-02 20:46 msv Status resolved => reviewed
2017-10-03 10:04 git Note Added: 0071141
2017-10-03 13:24 bugmaster Note Added: 0071150
2017-10-03 13:24 bugmaster Status reviewed => tested
2017-10-04 16:11 bugmaster Test case number => Not required
2017-10-06 14:55 bugmaster Changeset attached => occt master 8157aa28
2017-10-06 14:55 bugmaster Status tested => verified
2017-10-06 14:55 bugmaster Resolution open => fixed
2017-10-14 12:20 git Note Added: 0071472
2018-06-29 21:15 aiv Fixed in Version => 7.3.0
2018-06-29 21:19 aiv Status verified => closed