0029160: Coding - AppleCLang 9 compiler warning "binding dereferenced null pointer to reference has undefined behavior"

Avoid returning reference to null in AppDef_MyLineTool