src/AppDef/AppDef_MyLineTool.cxx
@@ -138,12 +138,12 @@ Standard_Boolean AppDef_MyLineTool::Tangency(const AppDef_MultiLine& ML,
 }
 
 
-AppDef_MultiLine& AppDef_MyLineTool::MakeMLBetween(const AppDef_MultiLine&,
+AppDef_MultiLine AppDef_MyLineTool::MakeMLBetween(const AppDef_MultiLine& theML,
 						   const Standard_Integer ,
 						   const Standard_Integer ,
 						   const Standard_Integer )
 {
-  return *((AppDef_MultiLine*) 0);
+  return theML; // stub
 }
 
 Standard_Boolean AppDef_MyLineTool::MakeMLOneMorePoint(const AppDef_MultiLine& ,
